--- a/nhl.html
+++ b/nhl.html
@@ -134,6 +134,54 @@
             <td><a href="https://roxiestreams.live/nhl-streams-8">Anaheim Ducks vs Seattle Kraken</a></td>
             <td>January 23, 2026 07:00 PM</td>
             <td><span class="countdown-timer" data-end="2026-01-24 19:00:00" data-start="2026-01-23 19:00:00"></span></td>
+        </tr>
+        <tr style="background-color: #333; color: white;">
+            <td colspan="3"><strong>Saturday, January 24, 2026</strong></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-1">Buffalo Sabres vs New York Islanders</a></td>
+            <td>January 24, 2026 10:00 AM</td>
+            <td><span class="countdown-timer" data-end="2026-01-25 10:00:00" data-start="2026-01-24 10:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-2">Utah Mammoth vs Nashville Predators</a></td>
+            <td>January 24, 2026 10:30 AM</td>
+            <td><span class="countdown-timer" data-end="2026-01-25 10:30:00" data-start="2026-01-24 10:30:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-3">Montreal Canadiens vs Boston Bruins</a></td>
+            <td>January 24, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-25 16:00:00" data-start="2026-01-24 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-4">Carolina Hurricanes vs Ottawa Senators</a></td>
+            <td>January 24, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-25 16:00:00" data-start="2026-01-24 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-5">Tampa Bay Lightning vs Columbus Blue Jackets</a></td>
+            <td>January 24, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-25 16:00:00" data-start="2026-01-24 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-6">Detroit Red Wings vs Winnipeg Jets</a></td>
+            <td>January 24, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-25 16:00:00" data-start="2026-01-24 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-7">Los Angeles Kings vs St. Louis Blues</a></td>
+            <td>January 24, 2026 05:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-25 17:00:00" data-start="2026-01-24 17:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-8">Florida Panthers vs Minnesota Wild</a></td>
+            <td>January 24, 2026 06:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-25 18:00:00" data-start="2026-01-24 18:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-9">Washington Capitals vs Edmonton Oilers</a></td>
+            <td>January 24, 2026 07:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-25 19:00:00" data-start="2026-01-24 19:00:00"></span></td>
         </tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
