--- a/nba.html
+++ b/nba.html
@@ -254,6 +254,124 @@
       </tr>
      </tbody>
     </table>
+    <h2>
+     NBA Schedule for January 24, 2026
+    </h2>
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-1">
+         New York Knicks vs Philadelphia 76ers
+        </a>
+       </td>
+       <td>
+        January 24, 2026 12:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 25, 2026 12:00 PM:00" data-start="January 24, 2026 12:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-2">
+         Golden State Warriors vs Minnesota Timberwolves
+        </a>
+       </td>
+       <td>
+        January 24, 2026 2:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 25, 2026 2:30 PM:00" data-start="January 24, 2026 2:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-3">
+         Washington Wizards vs Charlotte Hornets
+        </a>
+       </td>
+       <td>
+        January 24, 2026 3:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 25, 2026 3:00 PM:00" data-start="January 24, 2026 3:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-4">
+         Cleveland Cavaliers vs Orlando Magic
+        </a>
+       </td>
+       <td>
+        January 24, 2026 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 25, 2026 4:00 PM:00" data-start="January 24, 2026 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-5">
+         Boston Celtics vs Chicago Bulls
+        </a>
+       </td>
+       <td>
+        January 24, 2026 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 25, 2026 5:00 PM:00" data-start="January 24, 2026 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-6">
+         Los Angeles Lakers vs Dallas Mavericks
+        </a>
+       </td>
+       <td>
+        January 24, 2026 5:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 25, 2026 5:30 PM:00" data-start="January 24, 2026 5:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-7">
+         Miami Heat vs Utah Jazz
+        </a>
+       </td>
+       <td>
+        January 24, 2026 6:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 25, 2026 6:30 PM:00" data-start="January 24, 2026 6:30 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
     <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
      <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
       <li class="nav-item">
