--- a/soccer.html
+++ b/soccer.html
@@ -204,8 +204,8 @@
 </tr>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-9">Lens vs Marseille</a></td>
-<td>January 24, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="January 25, 2026 12:00:00 PM" data-start="January 24, 2026 12:00:00 PM"></span></td>
+<td>January 24, 2026 12:05 PM</td>
+<td><span class="countdown-timer" data-end="January 25, 2026 12:00:00 PM" data-start="January 24, 2026 12:05:00 PM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-13">Botafogo vs Bangu</a></td>
@@ -213,12 +213,7 @@
 <td><span class="countdown-timer" data-end="January 25, 2026 04:00:00 PM" data-start="January 24, 2026 04:00:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-13">Botafogo vs Bangu</a></td>
-<td>January 24, 2026 16:00 PM</td>
-<td><span class="countdown-timer" data-end="January 25, 2026 04:00:00 PM" data-start="January 24, 2026 04:00:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-14">Botafogo vs Bangu</a></td>
+<td><a href="https://roxiestreams.live/soccer-streams-14">Inter Miami vs Alianza Lima</a></td>
 <td>January 24, 2026 17:00 PM</td>
 <td><span class="countdown-timer" data-end="January 25, 2026 05:00:00 PM" data-start="January 24, 2026 05:00:00 PM"></span></td>
 </tr>
