--- a/index.html
+++ b/index.html
@@ -184,24 +184,34 @@
 <tbody>
 <tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer">Laliga</a></td>
-<td>January 23, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="January 24, 2026 12:00:00 PM" data-start="January 23, 2026 12:00:00 PM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-5">Laliga</a></td>
+<td>January 24, 2026 05:00 AM</td>
+<td><span class="countdown-timer" data-end="January 25, 2026 05:00:00 AM" data-start="January 24, 2026 05:00:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/ppv-streams-1">ZUFFA BOXING: WALSH VS OCAMPO</a></td>
-<td>January 23, 2026 2:30 PM</td>
-<td><span class="countdown-timer" data-end="January 24, 2026 02:30:00 PM" data-start="January 23, 2026 02:30:00 PM"></span></td>
+<td><a href24https:="" roxiestreams.live="" soccer"="">Premier League</a></td>
+<td>January 24, 2026 07:00 AM</td>
+<td><span class="countdown-timer" data-end="January 25, 2026 07:00:00 AM" data-start="January 24, 2026 07:00:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/nba">NBA</a></td>
-<td>January 23, 2026 4:00 PM</td>
-<td><span class="countdown-timer" data-end="January 24, 2026 04:00:00 PM" data-start="January 23, 2026 04:00:00 PM"></span></td>
+<td><a href="https://roxiestreams.live/supercross">AMA Supercross Anaheim II</a></td>
+<td>January 24, 2026 10:00 AM & 5:00 PM</td>
+<td><span class="countdown-timer" data-end="January 25, 2026 10:00:00 AM" data-start="January 24, 2026 10:00:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/wwe-streams">WWE Smackdown</a></td>
-<td>January 23, 2026 5:00 PM</td>
-<td><span class="countdown-timer" data-end="January 24, 2026 05:00:00 PM" data-start="January 23, 2026 05:00:00 PM"></span></td>
+<td><a href="https://roxiestreams.live/imsa">Rolex 24 at DAYTONA</a></td>
+<td>January 24, 2026 10:40 AM</td>
+<td><span class="countdown-timer" data-end="January 25, 2026 10:40:00 AM" data-start="January 24, 2026 10:40:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/ufc">UFC 324: Gaethje vs Pimblett</a></td>
+<td>January 24, 2026 2:30 PM</td>
+<td><span class="countdown-timer" data-end="January 25, 2026 02:30:00 PM" data-start="January 24, 2026 02:30:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/wwe-streams">WWE Saturday Night's Main Event</a></td>
+<td>January 24, 2026 5:00 PM</td>
+<td><span class="countdown-timer" data-end="January 25, 2026 05:00:00 PM" data-start="January 24, 2026 05:00:00 PM"></span></td>
 </tr>
 <tr>
 </tr></tr></tbody>
