--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 <td><span class="countdown-timer" data-end="January 25, 2026 05:00:00 AM" data-start="January 24, 2026 05:00:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href24https:="" roxiestreams.live="" soccer"="">Premier League</a></td>
+<td><a href="https://roxiestreams.live/soccer">Premier League</a></td>
 <td>January 24, 2026 07:00 AM</td>
 <td><span class="countdown-timer" data-end="January 25, 2026 07:00:00 AM" data-start="January 24, 2026 07:00:00 AM"></span></td>
 </tr>
