--- a/soccer.html
+++ b/soccer.html
@@ -123,6 +123,11 @@
 <td><span class="countdown-timer" data-end="January 25, 2026 05:00:00 AM" data-start="January 24, 2026 05:00:00 AM"></span></td>
 </tr>
 <tr>
+<td><a href="https://roxiestreams.live/soccer-streams-10">Samsunspor vs Kocaelispor</a></td>
+<td>January 24, 2026 6:00 AM</td>
+<td><span class="countdown-timer" data-end="January 25, 2026 06:30:00 AM" data-start="January 24, 2026 06:00:00 AM"></span></td>
+</tr>
+<tr>
 <td><a href="https://roxiestreams.live/soccer-streams-6">Bayern München vs Augsburg</a></td>
 <td>January 24, 2026 6:30 AM</td>
 <td><span class="countdown-timer" data-end="January 25, 2026 06:30:00 AM" data-start="January 24, 2026 06:30:00 AM"></span></td>
