--- a/ufc.html
+++ b/ufc.html
@@ -102,6 +102,10 @@
             <div id="playerContainer"></div>
             <div class="streamchanger">
                 <button class="streambutton" onclick="showPlayer('clappr', 'https://601.shadow-ran.online/ufc.m3u8')">Stream 1</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://601.shadow-ran.online/ufc.m3u8')">Stream 2 (HUB Sports)</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://601.shadow-ran.online/ufc.m3u8')">Stream 3 (TNT)</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://601.shadow-ran.online/ufc.m3u8')">Stream 4 (Paramount)</button>
+                <button class="streambutton" onclick="showPlayer('clappr', 'https://601.shadow-ran.online/ufc.m3u8')">Stream 5 (MAIN EVENT)</button>
             </div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.live"></iframe>
