--- a/soccer-streams-8.html
+++ b/soccer-streams-8.html
@@ -127,7 +127,7 @@ fetch('domains.txt')
   .then(data => {
     domains = data.trim().split('\n').filter(d => d.trim());
     // Auto-load initial stream after domains load
-    setTimeout(() => showPlayer('clappr', getRandomStream('mancity.m3u8')), 500);
+    setTimeout(() => showPlayer('clappr', getRandomStream('epl.m3u8')), 500);
   })
   .catch(() => {
     console.error('Failed to load domains.txt');
