--- a/nba.html
+++ b/nba.html
@@ -146,10 +146,10 @@
         </a>
        </td>
        <td>
-        January 24, 2026 3:00 PM
+        January 24, 2026 09:30 AM
        </td>
        <td>
-        <span class="countdown-timer" data-end="January 25, 2026 3:00 PM:00" data-start="January 24, 2026 3:00 PM:00">
+        <span class="countdown-timer" data-end="January 25, 2026 3:00 PM:00" data-start="January 24, 2026 09:30 AM:00">
         </span>
        </td>
       </tr>
