--- a/soccer.html
+++ b/soccer.html
@@ -98,134 +98,124 @@
 <tr>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-1">Hannover 96 vs Fortuna Düsseldorf</a></td>
-<td>January 24, 2026 4:00 AM</td>
-<td><span class="countdown-timer" data-end="January 25, 2026 04:00:00 AM" data-start="January 24, 2026 04:00:00 AM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Portsmouth vs Southampton</a></td>
+<td>January 25, 2026 4:00 AM</td>
+<td><span class="countdown-timer" data-end="January 26, 2026 04:00:00 AM" data-start="January 25, 2026 04:00:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">West Ham vs Sunderland</a></td>
-<td>January 24, 2026 4:30 AM</td>
-<td><span class="countdown-timer" data-end="January 25, 2026 04:30:00 AM" data-start="January 24, 2026 04:30:00 AM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Atlético Madrid vs Mallorca</a></td>
+<td>January 25, 2026 5:00 AM</td>
+<td><span class="countdown-timer" data-end="January 26, 2026 05:00:00 AM" data-start="January 25, 2026 05:00:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-3">Middlesbrough vs Preston North End</a></td>
-<td>January 24, 2026 4:30 AM</td>
-<td><span class="countdown-timer" data-end="January 25, 2026 04:30:00 AM" data-start="January 24, 2026 04:30:00 AM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Brentford vs Nottingham Forest</a></td>
+<td>January 25, 2026 6:00 AM</td>
+<td><span class="countdown-timer" data-end="January 26, 2026 06:00:00 AM" data-start="January 25, 2026 06:00:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-4">Millwall vs Charlton Athletic</a></td>
-<td>January 24, 2026 4:30 AM</td>
-<td><span class="countdown-timer" data-end="January 25, 2026 04:30:00 AM" data-start="January 24, 2026 04:30:00 AM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Crystal Palace vs Chelsea</a></td>
+<td>January 25, 2026 6:00 AM</td>
+<td><span class="countdown-timer" data-end="January 26, 2026 06:00:00 AM" data-start="January 25, 2026 06:00:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-5">Rayo Vallecano vs Osasuna</a></td>
-<td>January 24, 2026 5:00 AM</td>
-<td><span class="countdown-timer" data-end="January 25, 2026 05:00:00 AM" data-start="January 24, 2026 05:00:00 AM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-5">Newcastle United vs Aston Villa</a></td>
+<td>January 25, 2026 6:00 AM</td>
+<td><span class="countdown-timer" data-end="January 26, 2026 06:00:00 AM" data-start="January 25, 2026 06:00:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-10">Samsunspor vs Kocaelispor</a></td>
-<td>January 24, 2026 6:00 AM</td>
-<td><span class="countdown-timer" data-end="January 25, 2026 06:30:00 AM" data-start="January 24, 2026 06:00:00 AM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-6">Atalanta vs Parma</a></td>
+<td>January 25, 2026 6:00 AM</td>
+<td><span class="countdown-timer" data-end="January 26, 2026 06:00:00 AM" data-start="January 25, 2026 06:00:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-6">Bayern München vs Augsburg</a></td>
-<td>January 24, 2026 6:30 AM</td>
-<td><span class="countdown-timer" data-end="January 25, 2026 06:30:00 AM" data-start="January 24, 2026 06:30:00 AM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-7">Nantes vs Nice</a></td>
+<td>January 25, 2026 6:00 AM</td>
+<td><span class="countdown-timer" data-end="January 26, 2026 06:00:00 AM" data-start="January 25, 2026 06:00:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Burnley vs Tottenham</a></td>
-<td>January 24, 2026 7:00 AM</td>
-<td><span class="countdown-timer" data-end="January 25, 2026 07:00:00 AM" data-start="January 24, 2026 07:00:00 AM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-8">Borussia M'gladbach vs Stuttgart</a></td>
+<td>January 25, 2026 6:30 AM</td>
+<td><span class="countdown-timer" data-end="January 26, 2026 06:30:00 AM" data-start="January 25, 2026 06:30:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-7">Fulham vs Brighton</a></td>
-<td>January 24, 2026 7:00 AM</td>
-<td><span class="countdown-timer" data-end="January 25, 2026 07:00:00 AM" data-start="January 24, 2026 07:00:00 AM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Hearts vs Celtic</a></td>
+<td>January 25, 2026 7:00 AM</td>
+<td><span class="countdown-timer" data-end="January 26, 2026 07:00:00 AM" data-start="January 25, 2026 07:00:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-8">Man City vs Wolves</a></td>
-<td>January 24, 2026 7:00 AM</td>
-<td><span class="countdown-timer" data-end="January 25, 2026 07:00:00 AM" data-start="January 24, 2026 07:00:00 AM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Barcelona vs Real Oviedo</a></td>
+<td>January 25, 2026 7:15 AM</td>
+<td><span class="countdown-timer" data-end="January 26, 2026 07:15:00 AM" data-start="January 25, 2026 07:15:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-4">Birmingham City vs Stock City</a></td>
-<td>January 24, 2026 7:00 AM</td>
-<td><span class="countdown-timer" data-end="January 25, 2026 07:00:00 AM" data-start="January 24, 2026 07:00:00 AM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-9">Brest vs Toulouse</a></td>
+<td>January 25, 2026 8:15 AM</td>
+<td><span class="countdown-timer" data-end="January 26, 2026 08:15:00 AM" data-start="January 25, 2026 08:15:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-5">Valencia vs Espanyol</a></td>
-<td>January 24, 2026 7:15 AM</td>
-<td><span class="countdown-timer" data-end="January 25, 2026 07:15:00 AM" data-start="January 24, 2026 07:15:00 AM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-7">Metz vs Lyon</a></td>
+<td>January 25, 2026 8:15 AM</td>
+<td><span class="countdown-timer" data-end="January 26, 2026 08:15:00 AM" data-start="January 25, 2026 08:15:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-9">Rennes vs Lorient</a></td>
-<td>January 24, 2026 8:00 AM</td>
-<td><span class="countdown-timer" data-end="January 25, 2026 08:00:00 AM" data-start="January 24, 2026 08:00:00 AM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-10">Arsenal vs Manchester United</a></td>
+<td>January 25, 2026 8:30 AM</td>
+<td><span class="countdown-timer" data-end="January 26, 2026 08:30:00 AM" data-start="January 25, 2026 08:30:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-10">Fatih Karagümrük vs Galatasaray</a></td>
-<td>January 24, 2026 9:00 AM</td>
-<td><span class="countdown-timer" data-end="January 25, 2026 09:00:00 AM" data-start="January 24, 2026 09:00:00 AM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-8">Freiburg vs Köln</a></td>
+<td>January 25, 2026 9:00 AM</td>
+<td><span class="countdown-timer" data-end="January 26, 2026 09:00:00 AM" data-start="January 25, 2026 09:00:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-4">Fiorentina vs Cagliari</a></td>
-<td>January 24, 2026 9:00 AM</td>
-<td><span class="countdown-timer" data-end="January 25, 2026 09:00:00 AM" data-start="January 24, 2026 09:00:00 AM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-11">Juventus vs Napoli</a></td>
+<td>January 25, 2026 9:00 AM</td>
+<td><span class="countdown-timer" data-end="January 26, 2026 09:00:00 AM" data-start="January 25, 2026 09:00:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-11">Bournemouth vs Liverpool</a></td>
-<td>January 24, 2026 9:30 AM</td>
-<td><span class="countdown-timer" data-end="January 25, 2026 09:30:00 AM" data-start="January 24, 2026 09:30:00 AM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Real Sociedad vs Celta Vigo</a></td>
+<td>January 25, 2026 9:30 AM</td>
+<td><span class="countdown-timer" data-end="January 26, 2026 09:30:00 AM" data-start="January 25, 2026 09:30:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-5">Sevilla vs Athletic Club</a></td>
-<td>January 24, 2026 9:30 AM</td>
-<td><span class="countdown-timer" data-end="January 25, 2026 09:30:00 AM" data-start="January 24, 2026 09:30:00 AM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-12">Benfica vs Estrela</a></td>
+<td>January 25, 2026 10:00 AM</td>
+<td><span class="countdown-timer" data-end="January 26, 2026 10:00:00 AM" data-start="January 25, 2026 10:00:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-6">Dortmund vs Union Berlin</a></td>
-<td>January 24, 2026 9:30 AM</td>
-<td><span class="countdown-timer" data-end="January 25, 2026 09:30:00 AM" data-start="January 24, 2026 09:30:00 AM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-13">Bolivia vs Mexico</a></td>
+<td>January 25, 2026 11:30 AM</td>
+<td><span class="countdown-timer" data-end="January 26, 2026 11:30:00 AM" data-start="January 25, 2026 11:30:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-9">Le Havre vs Monaco</a></td>
-<td>January 24, 2026 10:00 AM</td>
-<td><span class="countdown-timer" data-end="January 25, 2026 10:00:00 AM" data-start="January 24, 2026 10:00:00 AM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-7">Lille vs Strasbourg</a></td>
+<td>January 25, 2026 11:45 AM</td>
+<td><span class="countdown-timer" data-end="January 26, 2026 11:45:00 AM" data-start="January 25, 2026 11:45:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-4">Lecce vs Lazio</a></td>
-<td>January 24, 2026 11:45 AM</td>
-<td><span class="countdown-timer" data-end="January 25, 2026 11:45:00 AM" data-start="January 24, 2026 11:45:00 AM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-6">Roma vs Milan</a></td>
+<td>January 25, 2026 11:45 AM</td>
+<td><span class="countdown-timer" data-end="January 26, 2026 11:45:00 AM" data-start="January 25, 2026 11:45:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-5">Villarreal vs Real Madrid</a></td>
-<td>January 24, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="January 25, 2026 12:00:00 PM" data-start="January 24, 2026 12:00:00 PM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Deportivo Alavés vs Real Betis</a></td>
+<td>January 25, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 26, 2026 12:00:00 PM" data-start="January 25, 2026 12:00:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-12">Barracas Central vs River Plate</a></td>
-<td>January 24, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="January 25, 2026 12:00:00 PM" data-start="January 24, 2026 12:00:00 PM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-14">Atlético Mineiro vs Cruzeiro</a></td>
+<td>January 25, 2026 13:00 PM</td>
+<td><span class="countdown-timer" data-end="January 26, 2026 01:00:00 PM" data-start="January 25, 2026 01:00:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-9">Lens vs Marseille</a></td>
-<td>January 24, 2026 12:05 PM</td>
-<td><span class="countdown-timer" data-end="January 25, 2026 12:00:00 PM" data-start="January 24, 2026 12:05:00 PM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-15">Fluminense vs Flamengo</a></td>
+<td>January 25, 2026 13:00 PM</td>
+<td><span class="countdown-timer" data-end="January 26, 2026 01:00:00 PM" data-start="January 25, 2026 01:00:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-13">Botafogo vs Bangu</a></td>
-<td>January 24, 2026 16:00 PM</td>
-<td><span class="countdown-timer" data-end="January 25, 2026 04:00:00 PM" data-start="January 24, 2026 05:00:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-14">Inter Miami vs Alianza Lima</a></td>
-<td>January 24, 2026 17:00 PM</td>
-<td><span class="countdown-timer" data-end="January 25, 2026 05:00:00 PM" data-start="January 24, 2026 05:00:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-15">Universitario vs Universidad Chile</a></td>
-<td>January 24, 2026 17:00 PM</td>
-<td><span class="countdown-timer" data-end="January 25, 2026 05:00:00 PM" data-start="January 24, 2026 05:00:00 PM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-16">Boca Juniors vs Deportivo Riestra</a></td>
+<td>January 25, 2026 13:30 PM</td>
+<td><span class="countdown-timer" data-end="January 26, 2026 01:30:00 PM" data-start="January 25, 2026 01:30:00 PM"></span></td>
 </tr>
 <tr>
 </tr></tbody></tr></tbody></table></div>
