--- a/nba.html
+++ b/nba.html
@@ -140,100 +140,101 @@
       </tr>
      </thead>
      <tbody>
-       <td>
-        <a href="https://roxiestreams.live/nba-streams-3">
-         Washington Wizards vs Charlotte Hornets
-        </a>
-       </td>
-       <td>
-        January 24, 2026 09:30 AM
-       </td>
-       <td>
-        <span class="countdown-timer" data-end="January 25, 2026 3:00 PM:00" data-start="January 24, 2026 09:30 AM:00">
-        </span>
-       </td>
-      </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-1">
-         New York Knicks vs Philadelphia 76ers
+         Sacramento Kings vs Detroit Pistons
         </a>
        </td>
        <td>
-        January 24, 2026 12:00 PM
+        January 25, 2026 12:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="January 25, 2026 12:00 PM:00" data-start="January 24, 2026 12:00 PM:00">
+        <span class="countdown-timer" data-end="January 26, 2026 12:00 PM:00" data-start="January 25, 2026 12:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-2">
-         Golden State Warriors vs Minnesota Timberwolves
+         Denver Nuggets vs Memphis Grizzlies
         </a>
        </td>
        <td>
-        January 24, 2026 2:30 PM
+        January 25, 2026 12:30 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="January 25, 2026 2:30 PM:00" data-start="January 24, 2026 2:30 PM:00">
+        <span class="countdown-timer" data-end="January 26, 2026 12:30 PM:00" data-start="January 25, 2026 12:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-3">
+         Dallas Mavericks vs Milwaukee Bucks
+        </a>
+       </td>
+       <td>
+        January 25, 2026 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 26, 2026 4:00 PM:00" data-start="January 25, 2026 4:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-4">
-         Cleveland Cavaliers vs Orlando Magic
+         Toronto Raptors vs Oklahoma City Thunder
         </a>
        </td>
        <td>
-        January 24, 2026 4:00 PM
+        January 25, 2026 4:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="January 25, 2026 4:00 PM:00" data-start="January 24, 2026 4:00 PM:00">
+        <span class="countdown-timer" data-end="January 26, 2026 4:00 PM:00" data-start="January 25, 2026 4:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-5">
-         Boston Celtics vs Chicago Bulls
+         New Orleans Pelicans vs San Antonio Spurs
         </a>
        </td>
        <td>
-        January 24, 2026 5:00 PM
+        January 25, 2026 4:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="January 25, 2026 5:00 PM:00" data-start="January 24, 2026 5:00 PM:00">
+        <span class="countdown-timer" data-end="January 26, 2026 4:00 PM:00" data-start="January 25, 2026 4:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-6">
-         Los Angeles Lakers vs Dallas Mavericks
+         Miami Heat vs Phoenix Suns
         </a>
        </td>
        <td>
-        January 24, 2026 5:30 PM
+        January 25, 2026 5:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="January 25, 2026 5:30 PM:00" data-start="January 24, 2026 5:30 PM:00">
+        <span class="countdown-timer" data-end="January 26, 2026 5:00 PM:00" data-start="January 25, 2026 5:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-7">
-         Miami Heat vs Utah Jazz
+         Brooklyn Nets vs Los Angeles Clippers
         </a>
        </td>
        <td>
-        January 24, 2026 6:30 PM
+        January 25, 2026 6:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="January 25, 2026 6:30 PM:00" data-start="January 24, 2026 6:30 PM:00">
+        <span class="countdown-timer" data-end="January 26, 2026 6:00 PM:00" data-start="January 25, 2026 6:00 PM:00">
         </span>
        </td>
       </tr>
