--- a/index.html
+++ b/index.html
@@ -75,7 +75,6 @@
             vertical-align: middle;
         }
 
-        /* NHL gold alert uses normal alert sizing */
         .alert-nhl-gold {
             background-color: #111111;
             color: #ffd700;
@@ -157,16 +156,15 @@
 </div>
 </div>
 </nav>
-<!-- NHL SECTION ADDED alert with gold outline animation and link -->
 <div class="alert alert-nhl-gold alert-dismissible mt-2" role="alert">
-<span class="alert-icon">🏒</span>
+<span class="alert-icon">⚡</span>
 <span class="nhl-gold-text">
-            NHL SECTION 
-            <a class="nhl-link" href="https://roxiestreams.live/nhl">ADDED</a>
-</span>
+        We noticed some lag and buffering during big events, so we’ve upgraded the capacity of every stream to prevent this. 🙏
+        <br/>
+        If you’re still having issues, please try refreshing the page or using an incognito window.
+    </span>
 <button aria-label="Close" class="btn-close" data-bs-dismiss="alert" type="button"></button>
 </div>
-<!-- Discord alert kept as-is -->
 <div class="alert alert-danger alert-dismissible mt-2" role="alert">
         We now have a Discord server. Enjoy! <a class="alert-link" href="https://discord.gg/JhkVmejRmn">Discord</a>
 <button aria-label="Close" class="btn-close" data-bs-dismiss="alert" type="button"></button>
@@ -184,39 +182,24 @@
 <tbody>
 <tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-5">Laliga</a></td>
-<td>January 24, 2026 05:00 AM</td>
-<td><span class="countdown-timer" data-end="January 25, 2026 05:00:00 AM" data-start="January 24, 2026 05:00:00 AM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Laliga</a></td>
+<td>January 25, 2026 05:00 AM</td>
+<td><span class="countdown-timer" data-end="January 26, 2026 05:00:00 AM" data-start="January 25, 2026 05:00:00 AM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.live/soccer">Premier League</a></td>
-<td>January 24, 2026 07:00 AM</td>
-<td><span class="countdown-timer" data-end="January 25, 2026 07:00:00 AM" data-start="January 24, 2026 07:00:00 AM"></span></td>
+<td>January 25, 2026 06:00 AM</td>
+<td><span class="countdown-timer" data-end="January 26, 2026 06:00:00 AM" data-start="January 25, 2026 06:00:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/supercross">AMA Supercross Anaheim II</a></td>
-<td>January 24, 2026 10:00 AM & 5:00 PM</td>
-<td><span class="countdown-timer" data-end="January 25, 2026 10:00:00 AM" data-start="January 24, 2026 10:00:00 AM"></span></td>
+<td><a href="https://roxiestreams.live/nba">NBA</a></td>
+<td>January 25, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 26, 2026 12:00:00 PM" data-start="January 25, 2026 12:00:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/imsa">Rolex 24 at DAYTONA</a></td>
-<td>January 24, 2026 10:40 AM</td>
-<td><span class="countdown-timer" data-end="January 25, 2026 10:40:00 AM" data-start="January 24, 2026 10:40:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/ufc">UFC 324: Gaethje vs Pimblett</a></td>
-<td>January 24, 2026 2:30 PM</td>
-<td><span class="countdown-timer" data-end="January 25, 2026 02:30:00 PM" data-start="January 24, 2026 02:30:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/wwe-streams">WWE Saturday Night's Main Event</a></td>
-<td>January 24, 2026 5:00 PM</td>
-<td><span class="countdown-timer" data-end="January 25, 2026 05:00:00 PM" data-start="January 24, 2026 05:00:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/ppv-streams-1">Taipei 101 Climb (SKYSCRAPER)</a></td>
-<td>January 24, 2026 5:00 PM</td>
-<td><span class="countdown-timer" data-end="January 25, 2026 05:00:00 PM" data-start="January 24, 2026 05:00:00 PM"></span></td>
+<td><a href="https://roxiestreams.live/nfl">NFL Divisonal Round</a></td>
+<td>January 25, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 26, 2026 12:00:00 PM" data-start="January 25, 2026 12:00:00 PM"></span></td>
 </tr>
 <tr>
 </tr></tr></tbody>
