--- a/soccer-streams-4.html
+++ b/soccer-streams-4.html
@@ -137,7 +137,7 @@
         }
 
         window.onload = function() {
-            showPlayer('clappr', 'https://daffodil.xn--1000-ugoa0hsb9a0hb.com/arena.m3u8');
+            showPlayer('clappr', 'https://daffodil.xn--1000-ugoa0hsb9a0hb.com/usa.m3u8');
         };
     </script>
     <script>
