--- a/nba.html
+++ b/nba.html
@@ -170,6 +170,20 @@
       </tr>
       <tr>
        <td>
+        <a href="https://roxiestreams.live/nba-streams-8">
+         Golden State Warriors vs Minnesota Timberwolves
+        </a>
+       </td>
+       <td>
+        January 25, 2026 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 26, 2026 4:00 PM:00" data-start="January 25, 2026 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
         <a href="https://roxiestreams.live/nba-streams-3">
          Dallas Mavericks vs Milwaukee Bucks
         </a>
