--- a/nfl-streams-2.html
+++ b/nfl-streams-2.html
@@ -13,21 +13,17 @@
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link href="/css/buttons.css" rel="stylesheet">
-    <link href="imgs/iconn.png" rel="shortcut icon" type="x-icon"/>
-    <script disable-devtool-auto src="https://cdn.jsdelivr.net/npm/disable-devtool/disable-devtool.min.js"></script>
+<link href="imgs/iconn.png" rel="shortcut icon" type="x-icon"/>
+<script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool/disable-devtool.min.js'></script>
     <script src="https://cdn.jsdelivr.net/npm/clappr@latest/dist/clappr.min.js"></script>
-
-    <!-- Twitch embed script -->
-    <script src="https://embed.twitch.tv/embed/v1.js"></script> <!-- [1] -->
-
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-EQ3BHVQGMN"></script>
     <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'G-EQ3BHVQGMN');
-    </script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-EQ3BHVQGMN');
+</script>
     <style>
         .navbar-brand {
             color: pink;
@@ -87,13 +83,14 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/soccer">Soccer</a></li>
-                    <li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/mlb">MLB</a></li>
-                    <li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/nba">NBA</a></li>
-                    <li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/nfl">NFL</a></li>
-                    <li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/nhl">NHL</a></li>
-                    <li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/fighting">Fighting</a></li>
-                    <li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/motorsports">Motorsports</a></li>
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/soccer">Soccer</a></li>
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/mlb">MLB</a></li>
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/nba">NBA</a></li>
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/nfl">NFL</a></li>
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/nhl">NHL</a></li>
+
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/fighting">Fighting</a></li>
+<li class="nav-item"><a class="nav-link" href="https://roxiestreams.live/motorsports">Motorsports</a></li>
                     <li class="nav-item"><a class="nav-link" href="https://discord.gg/JhkVmejRmn">Stream Request (Discord)</a></li>
                 </ul>
             </div>
@@ -102,19 +99,13 @@
 
     <div class="container container-fluid pt-2 text-white">
         <div class="fullplayer">
-            <!-- Clappr container -->
             <div id="playerContainer"></div>
-
-            <!-- Twitch container (Stream 4) -->
-            <div id="twitch-embed" style="width:100%; height:100%; display:none;"></div>
-
-            <div class="streamchanger">
-                <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('nfl2.m3u8', '601'))">Stream 1</button>
-                <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('main.m3u8', 'daffodil'))">Stream 2</button>
-                <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('nflalt.m3u8', '601'))">Stream 3</button>
-                <button class="streambutton" onclick="showTwitch()">Stream 4 (Twitch)</button>
-            </div>
-
+	<div class="streamchanger">
+	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('nfl.m3u8', 'daffodil'))">Stream 1</button>
+	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('main.m3u8', 'daffodil'))">Stream 2</button>
+	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('nflalt.m3u8', '601'))">Stream 3</button>
+	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('nflalty.m3u8', '601'))">Stream 4</button>
+	</div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.live"></iframe>
             </div>
@@ -130,21 +121,22 @@
 
 <script>
 var clapprPlayer;
-var twitchEmbed;
 var domains = [];
-var subdomain = '601';  // Edit this per HTML file
+var subdomain = 'daffodil';  // Edit this per HTML file
 
+// Load domains from txt file
 fetch('domains.txt')
   .then(response => response.text())
   .then(data => {
     domains = data.trim().split('\n').filter(d => d.trim());
-    setTimeout(() => showPlayer('clappr', getRandomStream('nfl2.m3u8')), 500);
+    // Auto-load initial stream after domains load
+    setTimeout(() => showPlayer('clappr', getRandomStream('nfl.m3u8')), 500);
   })
   .catch(() => {
     console.error('Failed to load domains.txt');
   });
 
-function getRandomStream(streamPath, subdomain = '601') {
+function getRandomStream(streamPath, subdomain = 'daffodil') {
   if (domains.length === 0) {
     return `https://${subdomain}.shadow-ran.online/${streamPath}`; // Fallback
   }
@@ -152,22 +144,8 @@ function getRandomStream(streamPath, subdomain = '601') {
   return `https://${subdomain}.${randomDomain}/${streamPath}`;
 }
 
-function hideTwitchShowClappr() {
-  const tDiv = document.getElementById('twitch-embed');
-  tDiv.style.display = 'none';
-
-  if (twitchEmbed) {
-    tDiv.innerHTML = '';
-    twitchEmbed = null;
-  }
-
-  document.getElementById('playerContainer').style.display = 'block';
-}
-
 function showPlayer(playerType, stream) {
   if (playerType === "clappr") {
-    hideTwitchShowClappr();
-
     if (clapprPlayer) {
       clapprPlayer.destroy();
     }
@@ -180,60 +158,25 @@ function showPlayer(playerType, stream) {
     });
   }
 }
-
-function showTwitch() {
-  // Destroy Clappr and hide its container
-  if (clapprPlayer) {
-    clapprPlayer.destroy();
-    clapprPlayer = null;
-  }
-  document.getElementById('playerContainer').style.display = 'none';
-
-  const tDiv = document.getElementById('twitch-embed');
-  tDiv.style.display = 'block';
-  tDiv.innerHTML = ''; // Clear old iframe if any
-
-  twitchEmbed = new Twitch.Embed("twitch-embed", {
-    width: "100%",
-    height: "100%",
-    channel: "fembylukynka",
-    layout: "video",
-    autoplay: true,
-    parent: ["roxiestreams.live"] // must match your domain [web:1][web:3]
-  });
-}
-
-function openTwitchPopup() {
-  var url = "https://player.twitch.tv/?channel=fembylukynka&parent=roxiestreams.live";
-
-  window.open(
-    url,
-    "twitchPopout",
-    "width=1024,height=576,menubar=no,toolbar=no,location=no,status=no"
-  );
-}
 </script>
-
-<script>
-    document.addEventListener('contextmenu', function (e) {
-        e.preventDefault();
-    });
-
-    document.addEventListener('keydown', function (e) {
-        if ((e.key === 'F12' || (e.ctrlKey && e.shiftKey && (e.key === 'I' || e.key === 'C'))) ||
-            (e.ctrlKey && e.shiftKey && e.key === 'J')) {
+    <script>
+        document.addEventListener('contextmenu', function (e) {
             e.preventDefault();
-        }
-    });
-</script>
+        });
 
-<script src="js/bootstrap.bundle.min.js"></script>
+        document.addEventListener('keydown', function (e) {
+            if ((e.key === 'F12' || (e.ctrlKey && e.shiftKey && (e.key === 'I' || e.key === 'C'))) ||
+                (e.ctrlKey && e.shiftKey && e.key === 'J')) {
+                e.preventDefault();
+            }
+        });
+    </script>
+    <script src="js/bootstrap.bundle.min.js"></script>
+
 
 <script type="text/javascript">
 aclib.runPop({
 zoneId: '10754426',
 });
-</script>
-
-</body>
+</script></body>
 </html>
